--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,18 +14,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="B1"
+        android:onClick="b1task"
                 />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="B2"
+        android:onClick="b2task"
         />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="B3"
+        android:onClick="b3task"
         />
 </LinearLayout>
     <TextView
